--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1547,6 +1547,22 @@ input, select, textarea {
 				background: #eee;
 			}
 
+			#content table {
+			  font-family: arial, sans-serif;
+			  border-collapse: collapse;
+			  width: 100%;
+			}
+
+			#content td, th {
+			  border: 1px solid #dddddd;
+			  text-align: left;
+			  padding: 8px;
+			}
+
+			#content tr:nth-child(even) {
+			  background-color: #dddddd;
+			}
+
 /* Form */
 
 	form label {
